--- a/client/src/styles/typography.scss
+++ b/client/src/styles/typography.scss
@@ -2,7 +2,8 @@
 @import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro');
 
 h1, h2, h3, h4, h5, h6 {
-  margin: 0.5rem;
+  margin: 0;
+  padding: 5px;
 }
 
 h1 {
