Create welcomeBox and section about for client homepage

--- a/client/src/components/layout/Header/Header.module.scss
+++ b/client/src/components/layout/Header/Header.module.scss
@@ -1,6 +1,7 @@
 @import '../../../styles/settings.scss';
 
 .root {
+  width: 100%;
   background-color: $color-main-light;
   display: flex;
   justify-content: space-between;
