--- a/client/src/components/views/Home/Homepage.module.scss
+++ b/client/src/components/views/Home/Homepage.module.scss
@@ -1,4 +1,15 @@
 @import '../../../styles/settings.scss';
 
-// .root {
-// }
+.root {
+  .welcomeBox {
+    background: url('../../../madaxCar.jpg') center top/cover no-repeat;
+    background-attachment: fixed;
+    opacity: 80%;
+    width: 100%;
+    height: calc(100vh - 60px);
+  }
+  .about {
+    background-color: lighten($color-main-dark, 30%);
+    opacity: initial;
+  }
+}
