--- a/client/src/styles/typography.scss
+++ b/client/src/styles/typography.scss
@@ -1,9 +1,11 @@
 @import './settings.scss';
 @import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro');
+@import url('https://fonts.googleapis.com/css2?family=Geo&display=swap');
 
 h1, h2, h3, h4, h5, h6 {
   margin: 0;
   padding: 5px;
+  display: inline-block;
 }
 
 h1 {
@@ -14,6 +16,22 @@ h1 {
 
 h2 {
   font-weight: bold;
-  margin: 2rem 0;
-  font-size: 3rem;
+  margin: 1.2rem 0;
+  font-size: 2rem;
+  position: relative;
+
+  &::after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 4px;
+    left: 0;
+    bottom: 0;
+    background-color: $color-main-light;
+  }
+}
+
+h3 {
+  font-size: 1.7rem;
+  padding: 0;
 }
