--- a/client/src/styles/settings.scss
+++ b/client/src/styles/settings.scss
@@ -1,5 +1,5 @@
-$color-main-light: #8cb533;
-$color-main-dark: #434539;
+$color-main-light: #87c00a;
+$color-main-dark: #454539;
 
 $color-text: #141414;
 $color-text-bright: #fff;
