--- a/client/src/components/layout/Header/Header.module.scss
+++ b/client/src/components/layout/Header/Header.module.scss
@@ -8,7 +8,7 @@
   height: 60px;
   align-items: center;
   padding: 0 10px;
-  box-shadow: .1px .1px 2px 2px $color-main-dark;
+  box-shadow: .1px .1px 2px 2px $color-main-light;
 
   .companyLogo {
     font-family: 'Geo', sans-serif;
