--- a/client/src/components/views/Home/Homepage.module.scss
+++ b/client/src/components/views/Home/Homepage.module.scss
@@ -2,7 +2,7 @@
 
 .root {
   .welcomeBox {
-    background: url('../../../madaxCar.jpg') center top/cover no-repeat;
+    background: url('../../../madaxCar.jpeg') center top/cover no-repeat;
     background-attachment: fixed;
     opacity: .8;
     width: 100%;
