Add route for product

--- a/client/src/components/features/AllProducts/AllProducts.module.scss
+++ b/client/src/components/features/AllProducts/AllProducts.module.scss
@@ -1,5 +1,12 @@
 @import '../../../styles/settings.scss';
 
-// .root {
+.root {
+  padding: 50px 120px;
+  display: flex;
+  flex-wrap: wrap;
 
-// }
+  .product {
+    flex: 30%;
+    width: 30%;
+  }
+}
