--- a/client/src/styles/global.scss
+++ b/client/src/styles/global.scss
@@ -8,7 +8,7 @@
 body {
   margin: 0;
   padding: 0;
-  color: $color-text;
+  color: $color-main-dark;
   font-family: $font-text;
   font-size: ($base-size * 1.3);
   line-height: 1.7;
