--- a/client/src/components/features/AllProducts/AllProducts.module.scss
+++ b/client/src/components/features/AllProducts/AllProducts.module.scss
@@ -7,13 +7,14 @@
   .wrapper {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: space-around;
   }
 
   .product {
     margin: 15px;
     padding: 15px;
     flex: 40%;
+    min-width: 260px;
     max-width: 40%;
     height: 400px;
     position: relative;
@@ -68,6 +69,14 @@
       height: 100%;
       object-fit: contain;
     }
+  }
+
+  @media(max-width:980px ) {
+    padding: 0 100px;
+  }
+
+  @media(max-width:740px ) {
+    padding: 0 20px;
   }
 
 }
