--- a/client/src/components/layout/Footer/Footer.module.scss
+++ b/client/src/components/layout/Footer/Footer.module.scss
@@ -13,5 +13,17 @@
   .icon {
     color: $color-main-light;
     font-size: 18px;
+
+    &:hover {
+      transform: scale(1.2);
+    }
+  }
+
+  @media(max-width:980px ) {
+    padding: 0 100px;
+  }
+
+  @media(max-width:740px ) {
+    padding: 0 20px;
   }
 }
