--- a/client/src/components/views/Product/Product.module.scss
+++ b/client/src/components/views/Product/Product.module.scss
@@ -1,5 +1,78 @@
 @import '../../../styles/settings.scss';
 
 .root {
-  padding: 0 200px;
+  padding: 20px 130px;
+
+  .productBox {
+    padding: 20px 40px;
+    min-height: calc(100vh - 60px);
+    overflow-y: scroll;
+    background-color: #fff;
+    margin: 40px 0;
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .imageBox {
+    height: 270px;
+    margin: 20px 0;
+    flex: 50%;
+    max-width: 50%;
+
+    img {
+      height: 100%;
+    }
+  }
+
+  .orderBox {
+    flex: 50%;
+    max-width: 50%;
+    padding: 15px;
+
+    p {
+      font-weight: 500;
+      font-size: $base-size * 1.5;
+
+    }
+
+    .amount {
+      width: 130px;
+    }
+  }
+
+  .price {
+
+    .vat {
+      font-weight: 300;
+      color: grey;
+      font-size: $base-size * .9;
+      margin: 0 15px;
+    }
+  }
+
+  .cart {
+    padding: 8px 14px;
+    margin: 20px 0 10px auto;
+    width: 220px;
+    background-color: $color-main-dark;
+    color: #fff;
+    display: flex;
+    justify-content: space-between;
+
+    &:hover {
+      background-color: lighten($color-main-dark, 10%);
+      color: $color-main-light;
+    }
+  }
+
+  @media (max-width: 840px) {
+
+    padding: 20px 50px;
+
+    .imageBox, .orderBox {
+      flex: 100%;
+      max-width: 100%;
+    }
+  }
+
 }
