Add new view for sended order and add new route for it

--- a/client/src/components/features/CartProducts/CartProducts.module.scss
+++ b/client/src/components/features/CartProducts/CartProducts.module.scss
@@ -15,9 +15,14 @@
     }
   }
 
+  .productBox {
+    width: 40%;
+  }
+
   .can {
     display: flex;
     align-items: center;
+    justify-content: space-between;
     color: $color-main-dark;
   }
 
