--- a/client/src/components/views/Home/Homepage.module.scss
+++ b/client/src/components/views/Home/Homepage.module.scss
@@ -1,14 +1,51 @@
 @import '../../../styles/settings.scss';
 
 .root {
+
   .welcomeBox {
     background: url('../../../madaxCar.jpeg') center top/cover no-repeat;
     background-attachment: fixed;
     opacity: .8;
     width: 100%;
     height: calc(100vh - 60px);
+    position: relative;
   }
+
+  .scrollDown {
+    position: absolute;
+    bottom: 40px;
+    right: 30px;
+    width: 60px;
+    height: 60px;
+    background-color: lighten($color-main-light, 80%);
+    opacity: .5;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 3px solid $color-main-light;
+    border-radius: 50%;
+    color: $color-main-light;
+
+    &:hover {
+      opacity: 1;
+    }
+
+    .arrowIcon {
+      font-size: 50px;
+    }
+  }
+
+
+
   .about {
     padding: 15px 200px;
   }
+
+  @media (max-width: 840px) {
+
+    .about {
+      padding: 20px 50px;
+    }
+  }
+
 }
