--- a/client/src/components/features/AllProducts/AllProducts.module.scss
+++ b/client/src/components/features/AllProducts/AllProducts.module.scss
@@ -10,6 +10,17 @@
     justify-content: space-around;
   }
 
+  .allProdcutsHeader{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    flex-wrap: wrap;
+
+    h2 {
+      margin-left: 30px;
+    }
+  }
+
   .product {
     margin: 15px;
     padding: 15px;
